# libnixstore-c

./: .editorconfig  CMakeLists.txt  default.nix  lib.cpp  nixstore-c.h  nixstore-c.pc.in  release.nix  test.c  test.nix  util.hpp
.github/workflows/: test.yml
